--- a/kNN_PCA_Logistic_Regression.ipynb
+++ b/kNN_PCA_Logistic_Regression.ipynb
@@ -684,18 +684,16 @@
    "outputs": [],
    "source": [
     "def image_to_feature_vector(image, size=(300, 300)):\n",
-    "    # resize the image to a fixed size, then flatten the image into a list of raw pixel intensities\n",
+    "    #resize the image and flatten the image into vector\n",
     "    return cv2.resize(image, size).flatten()\n",
     "def extract_color_histogram(image, bins=(8, 8, 8)):\n",
-    "    # #D histogram\n",
-    "    hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
-    "    hist = cv2.calcHist([hsv], [0, 1, 2], None, bins,[0, 180, 0, 256, 0, 256])\n",
+    "    result_cvt = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
+    "    histogram_color = cv2.calcHist([result_cvt], [0, 1, 2], None, bins,[0, 180, 0, 256, 0, 256])\n",
     "    if imutils.is_cv2():\n",
-    "        hist = cv2.normalize(hist)\n",
+    "        histogram_color = cv2.normalize(histogram_color)\n",
     "    else:\n",
-    "        cv2.normalize(hist, hist)\n",
-    "        # return the flattened histogram as the feature vector\n",
-    "    return hist.flatten()"
+    "        cv2.normalize(histogram_color, histogram_color)\n",
+    "    return histogram_color.flatten()"
    ]
   },
   {
@@ -708,24 +706,21 @@
    },
    "outputs": [],
    "source": [
-    "# grab the list of images that we'll be describing\n",
-    "imagePaths = list(paths.list_images('/content/drive/My Drive/SML_Project/data_566'))\n",
-    "# and labels list\n",
-    "rawImages = []\n",
-    "features = []\n",
-    "labels = []\n",
+    "#create the list of images\n",
+    "imagePaths = list(paths.list_images('/content/drive/My Drive/SML_Project/data'))\n",
+    "rawImages_list = []\n",
+    "features_list = []\n",
+    "labels_list = []\n",
     "# loop over the input images\n",
     "for (i, imagePath) in enumerate(imagePaths):\n",
-    "    # load the image and extract the class label (assuming that our\n",
-    "    # path as the format: /path/to/dataset/{class}.{image_num}.jpg\n",
-    "    image = cv2.imread(imagePath)\n",
-    "    label = df[df['image']==imagePaths[i].split('\\\\')[1].split('.')[0]]['level'].values[0]\n",
-    "    # extract raw pixel intensity \"features\", followed by a color histogram\n",
-    "    pixels = image_to_feature_vector(image)\n",
-    "    hist = extract_color_histogram(image)\n",
-    "    rawImages.append(pixels)\n",
-    "    features.append(hist)\n",
-    "    labels.append(label)"
+    "    image_file = cv2.imread(imagePath)\n",
+    "    image_label = df[df['image']==imagePaths[i].split('\\\\')[1].split('.')[0]]['level'].values[0]\n",
+    "    # extract raw pixel image matrix and color histogram feature matrix\n",
+    "    pixels_vector = image_to_feature_vector(image_file)\n",
+    "    color_histogram = extract_color_histogram(image_file)\n",
+    "    rawImages_list.append(pixels_vector)\n",
+    "    features_list.append(color_histogram)\n",
+    "    labels_list.append(image_label)"
    ]
   },
   {
@@ -738,9 +733,9 @@
    },
    "outputs": [],
    "source": [
-    "# partition the data into training and testing splits, using 75% for training and the remaining 25% for testing\n",
-    "(trainRI, testRI, trainRL, testRL) = train_test_split(rawImages, labels, test_size=0.25, random_state=42)\n",
-    "(trainFeat, testFeat, trainLabels, testLabels) = train_test_split(features, labels, test_size=0.25, random_state=42)\n"
+    "#partition the data into training and testing subsets with 75% for training and 25% for testing\n",
+    "(trainRawImages, testRawImages, trainRawLabels, testRawLabels) = train_test_split(rawImages_list, labels_list, test_size=0.25, random_state=888)\n",
+    "(trainHistFeat, testHistFeat, trainHistLabels, testHistLabels) = train_test_split(features_list, labels_list, test_size=0.25, random_state=666)\n"
    ]
   },
   {
@@ -753,11 +748,11 @@
    },
    "outputs": [],
    "source": [
-    "# train and evaluate a k-NN classifer on the raw pixel intensities\n",
+    "#train and evaluate a kNN classifer on the raw image matrix\n",
     "model = KNeighborsClassifier(n_neighbors=5,n_jobs=4)\n",
-    "model.fit(trainRI, trainRL)\n",
-    "acc = model.score(testRI, testRL)\n",
-    "print(\"raw pixel accuracy: {:.2f}%\".format(acc * 100))\n"
+    "model.fit(trainRawImages, trainRawLabels)\n",
+    "acc = model.score(testRawImages, testRawLabels)\n",
+    "print(\"raw image classification accuracy: \", acc * 100, \"%\")\n"
    ]
   },
   {
@@ -770,11 +765,11 @@
    },
    "outputs": [],
    "source": [
-    "# train and evaluate a k-NN classifer on the histogram representations\n",
+    "#train and evaluate a kNN classifer on the histogram feature matrix\n",
     "model = KNeighborsClassifier(n_neighbors=5,n_jobs=4)\n",
-    "model.fit(trainFeat, trainLabels)\n",
-    "acc = model.score(testFeat, testLabels)\n",
-    "print(\"histogram accuracy: {:.2f}%\".format(acc * 100))"
+    "model.fit(trainHistFeat, trainHistLabels)\n",
+    "acc = model.score(testHistFeat, testHistLabels)\n",
+    "print(\"histogram feature classification accuracy: \", acc * 100, \"%\")"
    ]
   }
  ],
